# pggan-clone

./: LICENSE  README.md  asset-manifest.json  config_default.yml  environment-dev.yml  index.html  requirements.txt  setup.cfg
.github/: unittest.yaml
.github/workflows/: unittest.yaml
demo/: package.json
demo/src/: App.js  index.css
pggan/: __main__.py  dataset.py  helper.py  types.py  worker.py
pggan/models/: __init__.py  modules.py
static/css/: main.ce5ab8d4.chunk.css  main.ce5ab8d4.chunk.css.map
static/js/: 2.ae014e35.chunk.js  2.ae014e35.chunk.js.map  2.ed0a38ed.chunk.js  2.ed0a38ed.chunk.js.map  3.921749b2.chunk.js  3.921749b2.chunk.js.map  3.c7d549e9.chunk.js  3.c7d549e9.chunk.js.map  main.0cf9be08.chunk.js  main.0cf9be08.chunk.js.map  main.e54f0085.chunk.js  main.e54f0085.chunk.js.map  runtime-main.33083f64.js  runtime-main.33083f64.js.map  runtime-main.b37749d4.js  runtime-main.b37749d4.js.map
tests/: config_test.yaml  test_cli.py  test_dataset.py  test_helper.py  test_model.py  test_modules.py
