[metadata]
name = pggan-clone
version=0.1.0
author= Sijin Kim
author_email = tlwlsdi0306@gmail.com
description = The implementation of ProgressiveGAN paper in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sijinkim/pggan-clone
project_urls =
    Bug Tracker = https://github.com/helloybzsijinkim/pggan-clone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pggan
python_requires = >=3.8
install_requires = 
    pyyaml==5.4
    numpy==1.21
    torch==1.9
    opencv-python==4.5


[options.entry_points]
console_scripts= 
    clane = pggan.__main__:main